--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body{
     /*-moz-transform: scaleX(-1);*/
     /*-moz-transform: scaleX(-1);*/
     /*-o-transform: scaleX(-1);*/
-    /*-webkit-transform: scaleX(-1);*/
+    /*-webkit-transform: scaleX(-1) rotate(30deg);*/
     /*transform: scaleX(-1);*/
     /*filter: FlipH;*/
     /*-ms-filter: "FlipH";*/
