--- a/css/style.css
+++ b/css/style.css
@@ -20,22 +20,10 @@ body{
 }
 
 #face img.main {
-    padding: 40px
+    /*padding: 40px*/
 }
 #face .flip{
     position: absolute;
     bottom: 0px;
     left: 0px;
 }
-.flipped {
-
-    /*-moz-transform: scaleX(-1);*/
-    /*-moz-transform: scaleX(-1);*/
-    /*-o-transform: scaleX(-1);*/
-    /*-webkit-transform: scaleX(-1) rotate(30deg);*/
-    /*transform: scaleX(-1);*/
-    /*filter: FlipH;*/
-    /*-ms-filter: "FlipH";*/
-
-}
-
