move_face bugfixes and breadcrumbs

--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,56 @@ body{
     z-index: 100;
     border: 1px solid black;
 }
+
+/*#face img.main {*/
+    /*[>padding: 40px<]*/
+/*}*/
+
+/*move face*/
+#model{
+    /*width: 600px; */
+    /*height: 800px; */
+    position: absolute; 
+    left: 200px; 
+    top: 50px; 
+    border: 1px solid black
+
+}
+
 #face {
     position: absolute;
 }
 
-#face img.main {
-    /*padding: 40px*/
-}
 #face .flip{
     position: absolute;
     bottom: 0px;
     left: 0px;
+}
+#face_area { border: 1px solid green; padding: 4px }
+
+#rotate {
+    position: absolute; 
+    text-align: center; 
+    width: 32px; 
+    height: 32px; 
+    left: 0px; 
+    top: 0px;  
+    z-index: 200; 
+    cursor: pointer;
+    /*background-color: red;*/
+}
+#rotate_handle {
+    width: 100%; 
+    position: absolute; 
+    top: -20px;  
+    text-align: center;
+
+}
+#rotate_handle .handle { 
+    position: relative;
+    width: 15px; 
+    height: 15px;
+    background-color: green;
+    display: inline-block; 
+    border-radius: 50%
 }
